<?xml version="1.0"?>
<package format="2">
  <name>control_toolbox_pid_tutorial</name>
  <version>0.0.0</version>
  <description>The control_toolbox_pid_tutorial package</description>

  <maintainer email="Sammy.Pfeiffer@student.uts.edu.au">Sammy Pfeiffer</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_export_depend>control_toolbox</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>control_toolbox</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>


</package>
